test/spec_vectors/simd_i16x8_extmul_i8x16/fail/module_11.wat
(module (func $i16x8.extmul_high_i8x16_u-1st-arg-empty (result v128) (i16x8.extmul_high_i8x16_u (v128.const i16x8 0 0 0 0 0 0 0 0))))